test/Error/CheckConst-skip/PureReadWrite/Main.ds

-- Checks reporting of PureReadWrite errors.
--

fun1 ()
 = do {	x1	= 2;
	y	= (+)@ x1 3;
	x1	:= 27; 
 };


fun2 ()
 = do {	list1	= [1, 2, 3];
	list2	= mapL ((*) 2) list1;
	(head list1) := 5; 
 };


y	= (\x -> do { 
		y = (+)@ x 3; 
		x := 1; 
		y;
	  }) 27;


-- This function has purity constraints and write effects, 
--	but they don't conflict.
--
fun3 ()
 = do { list1	= [[1], [2], [3]];
	list2	= mapL (\x -> case x of { Cons x xs -> x; }) list1;
	(head (head list1)) := 5;
 };








